--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8ca47bdf50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcde8801150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ca3ea0110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ca3ea0310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcde8ad8750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcde8aec450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ca4721a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ca4721c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcde93dd090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcde936ed50&gt;]</pre>
 </div>
 
 </div>
