--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb058f2990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc740ffe610&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb05bd5250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb05bd5450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc74109c250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc74109c450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb0646eb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb0646ed10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc741933b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc741933d90&gt;]</pre>
 </div>
 
 </div>
