--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efff8938ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4fba057250&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efff8fb1150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efff8fb1350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4fba182190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4fba182390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efff9201a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efff9201c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4fbaa1ab10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4fbaa1ad10&gt;]</pre>
 </div>
 
 </div>
