--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f45b30861d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3df1583550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f45b30a92d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f45b3707250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3df04b4190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3df04b4390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f45b3981bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f45b3941c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3df0d27ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3df0d27cd0&gt;]</pre>
 </div>
 
 </div>
