--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3573e4e650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f84197d6750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3572d02390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3572d02590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f84191cf210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f84191cf410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3573582c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3573582e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8419a53b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8419a53d50&gt;]</pre>
 </div>
 
 </div>
