--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fce1fc77e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f181d2fa150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fce1fc77cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fce1f99b250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f181d2af8d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f181cc72590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fce1ff9a2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fce2021fb50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f181d50bc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f181d553b10&gt;]</pre>
 </div>
 
 </div>
