--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdea275f2d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f829cf9f590&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdea212b350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdea212b550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f829c66c250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f829c66c450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdea29c9c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdea29c9e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f829cf04c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f829cf04e50&gt;]</pre>
 </div>
 
 </div>
