--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa819d6ca50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff314245350&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa81a3ea390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa81a3ea590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff312fa21d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff312fc3490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa81a636c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa81a636e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff31383aad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff313843d90&gt;]</pre>
 </div>
 
 </div>
