--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f76b53e09d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42e1742110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f76b4ab9290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f76b4ab9490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42e207f310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42e207f510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f76b533dc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f76b533de50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42e22b9c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42e22b9e90&gt;]</pre>
 </div>
 
 </div>
