--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42e1742110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe99197d0d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f42e207f310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f42e207f510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe9907c9210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe9907c9410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f42e22b9c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f42e22b9e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe991050a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe991050c50&gt;]</pre>
 </div>
 
 </div>
