--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f949f40f390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8b305c2b90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f949eb06250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f949eae1350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b2f4f2210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8b2f4f2410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f949f382990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f949f378a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b2fd64a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8b2fd64c10&gt;]</pre>
 </div>
 
 </div>
