--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd1168780d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8cfef4d1d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1156e42d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd1156e44d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8cfe63e110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8cfe63e310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd115f55b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd115f55d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8cfeeb1a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8cfeeb1c90&gt;]</pre>
 </div>
 
 </div>
