--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fabfed336d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feea5af2c90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fabfe720050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fabfe720250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feea581ae50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feea582f2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fabfef9e990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fabfef9eb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feea6098b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feea60a1c50&gt;]</pre>
 </div>
 
 </div>
