--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3253e2e890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8b88dd9a90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3252d4f110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3252d4f310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b88af2250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8b88af2450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f32535d1a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f32535d1c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b89372bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8b89372dd0&gt;]</pre>
 </div>
 
 </div>
