--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8c551e7dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcd7b7a2590&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c54edf210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8c54edf410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd7b7c6090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcd7b7c6290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c55762b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8c55762d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd7c05f9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcd7c05fbd0&gt;]</pre>
 </div>
 
 </div>
