--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5444094390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f80e7e30a90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5443a2a3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5443a2a5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f80e7504390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f80e7504590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f544429cc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f544429ce90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f80e7d9ccd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f80e7d9ced0&gt;]</pre>
 </div>
 
 </div>
