--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a94559650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f73a05f9350&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a93366210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7a93366410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f73a002e1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f73a002e3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a93bd8c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7a93bd8e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f73a08b1a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f73a08b1c90&gt;]</pre>
 </div>
 
 </div>
