--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcd4ff1e3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f40c644bcd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd4ff3c510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcd4ff3c710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f40c671d0d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f40c671d2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd507d8e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcd507e40d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f40c6fb6a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f40c6fb6c10&gt;]</pre>
 </div>
 
 </div>
