--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f09af61f090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f300db5ac90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f09ae43e210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f09ae43c290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f300d870090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f300d870290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f09aecd4b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f09aeccbbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f300dabda50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f300dabdc50&gt;]</pre>
 </div>
 
 </div>
