--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2ab9ad3290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f468ac8a390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2ab9da0390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2ab9da0590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f468afd1250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f468afd1450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2aba63bd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2aba63bf10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f468b230b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f468b230d90&gt;]</pre>
 </div>
 
 </div>
